# antigravity-manager

./: .gitignore  1metadata.json  2metadata.json  CHANGELOG.md  README.md  ROADMAP.md  fix_ext3.py  fix_lint.py  fix_remove.py  fix_test_remove.py  fix_test_remove_save.py  fix_tests.py  patch_backup.py  patch_backup_imports.py  patch_cleanup.py  patch_cli.py  patch_more_tests.py  patch_more_tests2.py  patch_pyproject.py  patch_pyproject2.py  patch_pyproject3.py  patch_pyproject4.py  patch_pyproject5.py  patch_pyproject_final.py  patch_restore.py  patch_status.py  patch_tables.py  patch_test_cli_sync.py  patch_test_doctor.py  patch_test_remove.py  pyproject.toml  status.py  test_add_safe.py  test_add_safe2.py  test_final_coverage.py  test_tar_error.py
.github/workflows/: publish.yml
src/antigravity_manager/: __init__.py  backup.py  banner.py  cli.py  cloud.py  config.py  cooldown.py  credentials.py  doctor.py  interactive.py  list_backups.py  menu.py  profile.py  prune.py  prune_backups.py  purge.py  registry.py  remove.py  restore.py  status.py  sync.py  ui.py  utils.py
src/antigravity_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
temp_codex_manager/: __init__.py  args.py  backup.py  chat.py  cli.py  cooldown.py  integrity.py  protected.py  prune_backups.py  ui.py  update.py
temp_gemini_manager/: args.py  banner.py  prune.py  restore.py  session.py
tests/: test_backup_restore.py  test_cli.py  test_cli_commands.py  test_config.py  test_cooldown.py  test_cooldown2.py  test_coverage_ext11.py  test_coverage_ext12.py  test_coverage_ext14.py  test_coverage_ext15.py  test_coverage_ext16.py  test_coverage_ext2.py  test_coverage_ext3.py  test_coverage_ext4.py  test_coverage_ext6.py  test_coverage_ext7.py  test_coverage_ext8.py  test_coverage_ext9.py  test_credentials.py  test_doctor.py  test_doctor_2.py  test_interactive.py  test_list_backups.py  test_profile.py  test_prune.py  test_prune_backups.py  test_prune_backups_consolidated.py  test_purge.py  test_registry.py  test_remove.py  test_status.py  test_status_2.py  test_status_3.py  test_status_4.py  test_status_probe.py  test_sync.py  test_ui_rendering.py  test_utils.py
