[project]
name = "antigravity-manager"
version = "0.1.0"
description = "Account backup, restore, cooldown, and status manager for Antigravity CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
agm = "antigravity_manager.cli:main"
antigravity-manager = "antigravity_manager.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
