[project]
name = "antigravity-manager"
version = "12.0.0"
description = "Account backup, restore, cooldown, and orchestration manager for Antigravity CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Dhruv", email = "dhruv13x@gmail.com" }
]

dependencies = [
  "pyfakefs>=6.2.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-timeout>=2.4.0",
  "rich>=13.0.0",
  "b2sdk>=2.1.0",
]

keywords = [
  "antigravity",
  "gemini",
  "backup",
  "cli",
  "automation",
  "orchestration",
  "quota",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/dhruv13x/antigravity-manager"
Repository = "https://github.com/dhruv13x/antigravity-manager"
Issues = "https://github.com/dhruv13x/antigravity-manager/issues"

[project.scripts]
agm = "antigravity_manager.cli:main"
antigravity-manager = "antigravity_manager.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-timeout>=2.2.0",
  "pytest-json-report>=1.5.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.10.0",
  "pyfakefs>=5.0.0",
  "ruff>=0.6.0",
  "black>=24.3.0",
  "mypy>=1.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

addopts = [
  "-v",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--tb=short",
  "--showlocals",
  "--import-mode=importlib",
  "--timeout=10",
  "--durations=10",
  "--cov=src/antigravity_manager",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=50",
]

log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
branch = true
source = ["src/antigravity_manager"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 50
precision = 2

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
